# tarantinors

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
migrations/: 20250902081009_create_roles_table.down.sql  20250902081009_create_roles_table.up.sql  20250902082344_create_person_table.down.sql  20250902082344_create_person_table.up.sql  20250902082355_create_genre_table.down.sql  20250902082355_create_genre_table.up.sql  20250902083042_create_movie_table.down.sql  20250902083042_create_movie_table.up.sql  20250902083508_create_movie_role_table.down.sql  20250902083508_create_movie_role_table.up.sql  20250902084019_create_movie_genre_table.down.sql  20250902084019_create_movie_genre_table.up.sql  20250902084843_create_award_table.down.sql  20250902084843_create_award_table.up.sql  20250902101920_create_award_category_table.down.sql  20250902101920_create_award_category_table.up.sql  20250902103759_create_movie_award.down.sql  20250902103759_create_movie_award.up.sql  20250902104051_create_movie_nomination_table.down.sql  20250902104051_create_movie_nomination_table.up.sql  20250902104847_create_update_trigger_function.down.sql  20250902104847_create_update_trigger_function.up.sql  20250902113628_populate_movie_roles.down.sql  20250902113628_populate_movie_roles.up.sql  20260102121528_create_indexes.down.sql  20260102121528_create_indexes.up.sql  20260107130557_create_quote_table.down.sql  20260107130557_create_quote_table.up.sql  20260107131351_create_quote_update_trigger_function.down.sql  20260107131351_create_quote_update_trigger_function.up.sql  (+4 more)
src/: docs.rs  (+3 more)
(+88 files in other folders)
